--- a/be/package.json
+++ b/be/package.json
@@ -13,11 +13,13 @@
     "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
-    "dayjs": "^1.8.28",
+    "dayjs": "^1.10.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.13"
+    "mongoose": "^5.12.13",
+    "multer": "^1.4.2",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
